--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ pandas==1.3.5
 requests==2.26.0
 seaborn==0.11.2
 wordcloud==1.8.1
+
+
+conda create --name lazypredict python nltk==3.6.5 pandas==1.3.5 requests==2.26.0 seaborn==0.11.2
