--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,10 @@ seaborn==0.11.2
 wordcloud==1.8.1
 
 
-conda create --name lazypredict python nltk==3.6.5 pandas==1.3.5 requests==2.26.0 seaborn==0.11.2
+conda create --name lazypredict python==3.6 nltk==3.6.5 pandas==1.3.5 requests==2.26.0 seaborn==0.11.2 scipy==1.6.0 
+
+
+
+conda install -c conda-forge lazypredict
+
+
